# OpenCVCheckVideoWriter

./: CMakeLists.txt  README.md  main.cpp
